# friction-dynamics-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: Angles.h  FrictionDynamics.h  Log.h  Volume.h
src/: Angles.cpp  FrictionDynamics.cpp  Log.cpp  Main.cpp  Volume.cpp
